
Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------

SuRun 1.2.1.0 Beta 7 - 2011-06-02
---------------------------------
* NEW: French resources by Laurent Hilsz. Thanks!
* FIX: Updating SuRun with a different locale failed.
       An English SuRun could not be updated by a French SuRun because the 
       SuRun service name was localized.
* NEW: Removed dependencies on wtsapi32.h and wtsapi32.lib
* NEW: added bin\Crypt32x64.Lib and bin\Crypt32x86.Lib because Crypt32.Lib is 
       missing in VS2005.

SuRun 1.2.1.0 Beta 6 - 2011-05-03
---------------------------------
* NEW: partly French resources by Laurent Hilsz. Thanks!
* FIX: "(Re-)Start as Administrator" did not work with captionless Windows
* FIX: IAT-Hook prevented SwitchDesktop in AVAST and caused a system deadlock

SuRun 1.2.1.0 Beta 5 - 2011-03-18
---------------------------------
* FIX: Install Hardware automatically as administrator did not work in all 
    1.2.1.0 Betas.

SuRun 1.2.1.0 Beta 4 - 2011-02-24
---------------------------------
* NEW: InstallSurun and SuRun set DEP permanently ON
* NEW: All files are compiled DEP compatible and with ASLR ON

SuRun 1.2.1.0 Beta 3 - 2011-02-15
---------------------------------
* NEW: SuRun's RunAs has a new "Run elevated" Option for non restricted 
    SuRunners and Administrators

SuRun 1.2.1.0 Beta 2 - 2011-02-15
---------------------------------
* FIX: If SuRun starts %windir%\system32\cmd.exe it inserts a /D option into 
  the command line to avoid cmd from running AutoRuns

SuRun 1.2.1.0 Beta 1 - 2011-02-01
---------------------------------
* IAT-Hooks are directly loaded without a separate thread.